Twenty Thirteen: make submenu links work correctly on tablets. Props tar.gz, purzlbaum, DavidTheMachine. See #24767. Built from https://develop.svn.wordpress.org/trunk@28699
git-svn-id: http://core.svn.wordpress.org/trunk@28516 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -2895,8 +2895,8 @@ footer.entry-meta {
 		color: #141412;
 	}
 
-	.toggled-on .nav-menu li a:hover,
-	.toggled-on .nav-menu ul a:hover {
+	.toggled-on .nav-menu > li a:hover,
+	.toggled-on .nav-menu > ul a:hover {
 		background-color: #db572f;
 		color: #fff;
 	}
